responsive as much i can

--- a/index.html
+++ b/index.html
@@ -6,10 +6,172 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice_project_flexbox_grid</title>
+    <!-- font_awesome -->
+    <script src="https://kit.fontawesome.com/ea5bc2153e.js" crossorigin="anonymous"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- header star -->
+    <header>
 
+    </header>
+    <!-- header end -->
+    <main>
+        <!-- Top -->
+        <section id="top_container">
+            <div class="top_player">
+                <h2 class="title">Top Player</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player_name">player_1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player_name">player_2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player_name">player_3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player_name">player_4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player_name">player_5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player_name">player_6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top_blogs">
+                <h2 class="blog_header">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thmbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog_details">
+                            <h3 class="blog_title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p>By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thmbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog_details">
+                            <h3 class="blog_title">UI cheat sheet:
+                                list vs grids</h3>
+                            <p>By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thmbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog_details">
+                            <h3 class="blog_title">7 typography tips
+                                for interface design</h3>
+                            <p>By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thmbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog_details">
+                            <h3 class="blog_title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p>By <a href="">Danny Sapio</a></p>
+                        </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- bottom -->
+        <section class="bottom_container">
+            <h3 class="Course_head">Latest Courses</h3>
+
+            <div class="courses">
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course_detail">
+                        <a class="course_name" href="">React - The Complete Guide 2020 </a>
+                    </div>
+                    <div class="course_author">
+                        Reed Krakoff
+                    </div>
+                    <div class="course_info">
+                        <div class="icon">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <span class="course_rating">4.5</span>
+                        <span class="course_time"><i class="far fa-clock small"></i> 01:30 hr</span>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course_detail">
+                        <a class="course_name" href="">Powerpoint 2020 Master Powerpoint Cour </a>
+                    </div>
+                    <div class="course_author">
+                        Reed Krakoff
+                    </div>
+                    <div class="course_info">
+                        <div class="icon">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <span class="course_rating">4.5</span>
+                        <span class="course_time"><i class="far fa-clock small"></i> 01:30 hr</span>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course_banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course_detail">
+                        <a class="course_name" href="">The Complete JavaScript - course 2020 </a>
+                    </div>
+                    <div class="course_author">
+                        Reed Krakoff
+                    </div>
+                    <div class="course_info">
+                        <div class="icon">
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <span class="course_rating">4.5</span>
+                        <span class="course_time"><i class="far fa-clock small"></i> 01:30 hr</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
